k8s/sandbox-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: sandbox-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: sandbox

  template:
    metadata:
      labels:
        app: sandbox

    spec:
      serviceAccountName: resource-manager

      containers:
        - name: main-sandbox-container
          image: sandbox:v1
          imagePullPolicy: IfNotPresent

          resources:
            limits:
              cpu: "500m"
              memory: "400Mi"

            requests:
              cpu: "250m"
              memory: "200Mi"

          ports:
            - containerPort: 3000
